Remove className param. Rename --arrow. Check if link by href

--- a/src/components/book-room-card/book-room-card.pug
+++ b/src/components/book-room-card/book-room-card.pug
@@ -41,5 +41,5 @@ mixin book-room-card(params)
         div.book-room-card__submit
             +btn({
               label: 'Забронировать',
-              arrow: true,
+              blockArrow: true,
             })
