--- a/src/components/pick-room-card/pick-room-card.pug
+++ b/src/components/pick-room-card/pick-room-card.pug
@@ -21,5 +21,5 @@ mixin pick-room-card(title)
         div.pick-room-card__submit
             +btn({
               label: 'Подобрать номер',
-              arrow: true,
+              blockArrow: true,
             })
