Add login form component

--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -17,6 +17,7 @@ include ../components/c-datepicker/c-datepicker
 include ../components/pick-room-card/pick-room-card
 include ../components/book-room-card/book-room-card
 include ../components/register-form/register-form
+include ../components/login-form/login-form
 
 block variables
     -
@@ -262,3 +263,6 @@ block content
 
     div
         +register-form()
+
+    div
+        +login-form()
