Remove margin from room-info block

--- a/src/components/book-room-card/book-room-card.scss
+++ b/src/components/book-room-card/book-room-card.scss
@@ -1,6 +1,7 @@
 @import './../../theme/variables';
 @import './../../theme/mixins';
 
+.book-room-card__room-info,
 .book-room-card__guests,
 .book-room-card__date {
     margin-bottom: 20px;
