Remove redundant id

--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -8,6 +8,6 @@ mixin rangeSlider(params)
     )
         label.range-slider__top
             span.range-slider__label.title.title--label= label
-            input.range-slider__output(type="text" id="amount" readonly)
+            input.range-slider__output(type="text" readonly)
 
         div.range-slider__slider
