Add autocomplete attr for login and register forms

--- a/src/components/field/field.pug
+++ b/src/components/field/field.pug
@@ -9,6 +9,7 @@ mixin field(params)
             value,
             disabled=false,
             hideLabel,
+            autocomplete,
         } = params;
 
     case type
@@ -25,6 +26,7 @@ mixin field(params)
                         placeholder=placeholder || label
                         value=value
                         disabled=disabled
+                        autocomplete=(typeof autocomplete === 'undefined') ? 'true' : autocomplete
                     )
 
         default
