--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -10,6 +10,7 @@ html {
     font-family: $font__main;
     font-size: 14px;
     line-height: 24px;
+    color: $color__text-main
 }
 
 body {
@@ -66,6 +67,7 @@ body {
     }
 
     &--label { // With margin does not get a click between label and field
+        margin-bottom: 0;
         padding-bottom: 5px;
     }
 }
