--- a/src/components/site-footer/site-footer.pug
+++ b/src/components/site-footer/site-footer.pug
@@ -55,7 +55,7 @@ mixin site-footer(params)
                       type: 'email',
                       label: 'Your email address',
                       hideLabel: true,
-                      arrow: true,
+                      arrowIcon: true,
                     })
 
             div.site-footer__bottom
