--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -17,6 +17,24 @@
     color: $color__dark-shade75;
 }
 
+.checkbox__input {
+    #{$hover} {
+        & + .checkbox__custom-box {
+            border-color: $color__purple;
+        }
+    }
+
+    &:checked {
+        & + .checkbox__custom-box {
+            border-color: $color__purple;
+        }
+
+        & + .checkbox__custom-box > .checkbox__check-icon {
+            display: block;
+        }
+    }
+}
+
 .checkbox__custom-box {
     display: flex;
     justify-content: center;
@@ -27,24 +45,13 @@
 
     border: 1px solid $color__dark-shade25;
     border-radius: 4px;
-}
 
-.checkbox__label:hover .checkbox__custom-box,
-.checkbox__label:focus .checkbox__custom-box,
-.checkbox__label:active .checkbox__custom-box {
-    border-color: $color__dark-shade50;
-}
-
-.checkbox__input:checked + .checkbox__custom-box {
-    border-color: $color__purple;
+    transition: border-color .2s;
 }
 
 .checkbox__check-icon {
     display: none;
     font-size: 10px;
-}
-.checkbox__input:checked + .checkbox__custom-box .checkbox__check-icon {
-    display: block;
 }
 
 .checkbox__description {
