--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -10,12 +10,31 @@
 }
 
 .radio__custom-radio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     width: 20px;
     height: 20px;
     margin-right: 10px;
 
     border: 1px solid $color__dark-shade25;
     border-radius: 50%;
+
+    transition: border-color .2s;
+
+    &::before { // Circle in custom radio
+        content: '';
+        opacity: 0;
+
+        width: 12px;
+        height: 12px;
+
+        background: $gradient__primary;
+        border-radius: 50%;
+
+        transition: opacity .1s;
+    }
 }
 .radio__label:hover .radio__custom-radio,
 .radio__label:focus .radio__custom-radio,
@@ -23,23 +42,16 @@
     border-color: $color__dark-shade50;
 }
 .radio__input:checked + .radio__custom-radio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     border-color: $color__purple;
 
     &::before { // Circle in custom radio
-        content: '';
-
-        width: 12px;
-        height: 12px;
-
-        background: $gradient__primary;
-        border-radius: 50%;
+        opacity: 1;
     }
 }
 
+.radio__label-text {
+    transition: color .2s;
+}
 .radio__input:checked ~ .radio__label-text { // change label-text color when input is checked
     color: $color__text-main;
 }
