--- a/src/components/c-datepicker/c-datepicker.scss
+++ b/src/components/c-datepicker/c-datepicker.scss
@@ -11,28 +11,18 @@
     display: flex;
 }
 
+.c-datepicker__start,
+.c-datepicker__end {
+    width: 150px;
+}
+
 .c-datepicker__input,
 .c-datepicker__start,
 .c-datepicker__end {
-    display: block;
-    width: 150px;
-    padding: 12px 32px 8px 15px;
-
-    background: #fff;
-    border: 1px solid $color__dark-shade25;
-    border-radius: 4px;
-
-    font-size: 14px;
-    line-height: 24px;
-
-    color: $color__dark-shade75;
+    padding-right: 32px;
 }
 
 .c-datepicker__input-label {
-    width: 100%;
-}
-
-.c-datepicker__input {
     width: 100%;
 }
 
@@ -40,14 +30,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     z-index: -1;
 
-    color: transparent;
+    height: 100%;
 
-    background: transparent;
-    border: none;
+    visibility: hidden;
 }
 
 .c-datepicker__start-label {
