--- a/src/components/btn/btn.scss
+++ b/src/components/btn/btn.scss
@@ -17,8 +17,9 @@
     background: none;
     border: none;
     border-radius: 0;
-
     cursor: pointer;
+
+    transition: all .1s;
 
     #{$hover} {
         opacity: .5;
