--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -14,14 +14,7 @@ html {
 }
 
 body {
-    //width: 1200px;
     margin: 30px auto 400px;
-}
-
-.ui-kit-page {
-    > div {
-        margin-bottom: 30px;
-    }
 }
 
 .visuallyhidden/*:not(:focus):not(:active)*/ {
@@ -78,17 +71,11 @@ body {
 
 .container {
     max-width: 1060px;
-    width: auto;
-    margin-left: 8px;
-    margin-right: 8px;
+    width: calc(100% - 16px);
+    margin-left: auto;
+    margin-right: auto;
 
     @media #{$media__tablet} {
-        margin-left: 24px;
-        margin-right: 24px;
-    }
-
-    @media #{$media__desktop} {
-        margin-left: auto;
-        margin-right: auto;
+        width: calc(100% - 48px);
     }
 }
