--- a/src/components/room-info-card/room-info-card.pug
+++ b/src/components/room-info-card/room-info-card.pug
@@ -2,7 +2,7 @@ include ./../room-info/room-info
 include ./../rate-btn/rate-btn
 
 mixin room-info-card(params)
-    - const { number, type, price, photos, reviewsCount } = params;
+    - const { number, type, price, photos, reviewsCount, rating } = params;
     - const { getNoun } = require('./../utils');
     div.room-info-card
         div.room-info-card__carousel
@@ -17,7 +17,7 @@ mixin room-info-card(params)
             div.room-info-card__room-info
                 +room-info({number, type, price})
             div.room-info-card__rating
-                +rateBtn(4)
+                +rateBtn(rating)
                 p.room-info-card__reviews-count
                     span.room-info-card__reviews-count-value= reviewsCount + ' '
                     = getNoun(reviewsCount, 'Отзыв', 'Отзыва', 'Отзывов')
